Bug 269820 - Fullwidget terminal emulator shows empty window when terminal emulator is minimized
Summary: Fullwidget terminal emulator shows empty window when terminal emulator is min...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Lepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-31 13:40 UTC by Marcin Gryszkalis
Modified: 2017-01-11 17:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcin Gryszkalis 2011-03-31 13:40:40 UTC
Version:           2.3.0 (using KDE 4.6.1) 
OS:                Linux

Oryginally reported as https://sourceforge.net/tracker/?func=detail&aid=2791144&group_id=6488&atid=106488

When Terminal Emulator is enabled (Settings->Show Terminal Emulator) it is possible to toggle Fullwidget Terminal Emulator using keyboard shortcut - e.g. Ctrl+F.

If the fullwidget terminal is disabled, it is possible to change the size of the terminal using the splitter above it. But there is the problem: When you make this terminal as small as possible (actually you completely hide the terminal - that's what I want) and enable the fullwidget terminal, I get an empty window and terminal is nowhere.


Reproducible: Always

Steps to Reproduce:
1) enable Terminal Emulator (Settings->Show Terminal Emulator)
2) hide the terminal using splitter above it
3) switch to Fullwidget Terminal Emulator (my settings (probably default) is Ctrl+F)

Actual Results:  
getting an empty window

Expected Results:  
getting the Fullwidget Terminal

After pressing ctrl-f the empty window has "resize handle" on it and you can drag it to get full-screen terminal.
Comment 1 Alex Bikadorov 2016-12-31 16:55:30 UTC
Still present. After 5+ years we could fix this now...
Comment 2 Alex Bikadorov 2017-01-11 17:18:04 UTC
Git commit 476a807d48f73bd9ed4fe65c5155324553b14e8e by Alexander Bikadorov.
Committed on 11/01/2017 at 17:12.
Pushed by abikadorov into branch 'master'.

FIXED: [ 269820 ] Fullscreen terminal emulator shows empty window when terminal emulator was minimized

M  +28   -25   krusader/krusaderview.cpp
M  +0    -1    krusader/krusaderview.h

https://commits.kde.org/krusader/476a807d48f73bd9ed4fe65c5155324553b14e8e