FIXED: [ 269820 ] Fullscreen terminal emulator shows empty window when terminal emulator was minimized

BUG: 269820